--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "postgres-proto-rs"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "A crate that helps you parse the postgres wire protocol"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,3 +13,4 @@ tokio = { version = "1", features = ["full"] }
 num-derive = "0.3.3"
 num-traits = "0.2"
 log = "0.4.17"
+memchr = "2.5.0"
