prepare for publishing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 license = "MIT"
 description = "A crate that helps you parse the postgres wire protocol"
+repository = "https://github.com/zain-kabani/postgres-proto-rs/"
+keywords = ["postgres", "postgres-protocol"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
