--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,12 @@ description = "A crate that helps you parse the postgres wire protocol"
 repository = "https://github.com/zain-kabani/postgres-proto-rs/"
 keywords = ["postgres", "postgres-protocol"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[dev-dependencies]
+tokio = { version = "1", features = ["full"] }
 
 [dependencies]
 bytes = "1"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["net", "io-util"] }
 num-derive = "0.3.3"
 num-traits = "0.2"
 log = "0.4.17"
-memchr = "2.5.0"
